--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "c:\\Program Files\\Java\\javafx-sdk-18.0.1\\lib\\javafx.media.jar",
         "c:\\Program Files\\Java\\javafx-sdk-18.0.1\\lib\\javafx.swing.jar",
         "c:\\Program Files\\Java\\javafx-sdk-18.0.1\\lib\\javafx.web.jar",
-        "c:\\Program Files\\Java\\javafx-sdk-18.0.1\\lib\\javafx-swt.jar"
+        "c:\\Program Files\\Java\\javafx-sdk-18.0.1\\lib\\javafx-swt.jar",
+        "c:\\Program Files\\Java\\mysql-connector-java-8.0.29\\mysql-connector-java-8.0.29.jar"
     ]
 }
